# code-guardian

./: LICENSE  README.md  codeguardian.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/routes/: analysis.py
backend/app/services/: guardian_service.py
backend_tests/: test_api.py
examples/sample_project/: app.py
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/api/: guardianApi.ts
frontend/src/components/: AnalysisSummary.tsx  Header.tsx  IssueBreakdown.tsx  IssueRow.tsx  IssuesTable.tsx  StatCard.tsx
src/codeguardian/: main.py
src/codeguardian/analyzers/: __init__.py  base.py  dead_code.py  parser.py
src/codeguardian/config/: __init__.py  config_loader.py
src/codeguardian/engine/: analysis_engine.py
src/codeguardian/models/: issue.py
src/codeguardian/report/: __init__.py  summary.py
src/codeguardian/visitors/: __init__.py  base.py
tests/: test_analyzer.py  test_config.py  test_dead_code.py  test_issue.py  test_parser.py  test_summary.py  test_visitor.py
